...
                                    Icons.chat_bubble_outline_rounded,
                                    size: 18,
                                    color: Color.fromRGBO(255, 255, 255, 0.6),
                                  ),
                                  SizedBox(width: 8),
                                  Text(
                                    'Reply',
                                    style: TextStyle(
                                      fontSize: 14,
                                      fontWeight: FontWeight.w500,
                                      color: Color.fromRGBO(
                                        255, 255, 255, 0.6,
                                      ),
...
