...
    );
  }

  Widget _plusButton(BuildContext context) {
    final readableColors = context.backgroundReadableColors;
    return Semantics(
      identifier: 'message_reaction_more',
      button: true,
      child: GestureDetector(
        onTap: widget.onPlusTap,
        child: Container(
          width: 44,
          height: 44,
...
