...
            ),

          // Layer 5: ExpandableFab (create group)
          ExpandableFab(
            anchor: ExpandableFabAnchor.topRight,
            fabSize: 40,
            fabSemanticIdentifier: 'orbit_create_group_fab',
            fabSemanticLabel: AppLocalizations.of(
              context,
            )!.orbit_create_group_action,
            openFabSemanticLabel: AppLocalizations.of(
              context,
            )!.orbit_close_create_menu_action,
...
