appId: ${APP_ID}
name: production_catalog_quote_reply
---
- scrollUntilVisible:
    element: '(?s)^.*\n${PARENT_PATTERN}\n.*$'
    direction: UP
    timeout: 30000
- assertVisible: '(?s)^.*\n${PARENT_PATTERN}\n.*$'
- longPressOn: '(?s)^.*\n${PARENT_PATTERN}\n.*$'
- tapOn: '^Reply$'
- tapOn:
    id: chat_composer
- inputText: ${MESSAGE}
- assertVisible:
    id: chat_composer
    text: '(?-i)^${MESSAGE_PATTERN}$'
- tapOn:
    id: chat_send
- assertVisible: '(?s-i)^.*\n${MESSAGE_PATTERN}\n.*$'
